# mutation-testing-pykonik

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fizzbuzz.py  pyproject.toml  requirements.txt
fizzbuzz/: fizzbuzz.py
tests/: test_fizzbuzz.py
